refactor: обновлен домен и название проекта, добавлена поддержка env переменных
- Заменен домен psytest.ru на professional-test.ru
- Обновлено название проекта с PsyTest на Professional Test
- Обновлены все социальные ссылки и email адреса
- Добавлена поддержка переменных окружения NEXT_PUBLIC_SITE_URL
- Год теперь генерируется динамически через new Date().getFullYear()
- Создан .env.local для локальной разработки
- Обновлен .env.example с новыми значениями

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
 # Основные настройки
-NEXT_PUBLIC_SITE_URL=https://psytest.ru
-NEXT_PUBLIC_API_URL=https://api.psytest.ru
+NEXT_PUBLIC_SITE_URL=https://professional-test.ru
+NEXT_PUBLIC_API_URL=https://api.professional-test.ru
 
 # Аналитика
 NEXT_PUBLIC_YANDEX_METRIKA_ID=12345678
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
 
 # API ключи (для будущих интеграций)
-DATABASE_URL=postgresql://user:password@localhost:5432/psytest
+DATABASE_URL=postgresql://user:password@localhost:5432/professional_test
 REDIS_URL=redis://localhost:6379
 
 # Email (для отправки результатов)
 SMTP_HOST=smtp.yandex.ru
 SMTP_PORT=465
-SMTP_USER=noreply@psytest.ru
+SMTP_USER=noreply@professional-test.ru
 SMTP_PASSWORD=your-smtp-password
-EMAIL_FROM=PsyTest <noreply@psytest.ru>
+EMAIL_FROM=Professional Test <noreply@professional-test.ru>
 
 # Внешние сервисы
 OPENAI_API_KEY=sk-...
@@ -28,7 +28,7 @@ VK_CLIENT_ID=
 VK_CLIENT_SECRET=
 
 # Безопасность
-NEXTAUTH_URL=https://psytest.ru
+NEXTAUTH_URL=https://professional-test.ru
 NEXTAUTH_SECRET=your-random-secret-key
 
 # Режим разработки
