--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,99 +6,59 @@ on:
   workflow_dispatch:
 
 env:
-  NODE_VERSION: '18.x'
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
-    
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - name: Log in to the Container registry
+      uses: docker/login-action@v3
       with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Install dependencies
-      run: npm ci
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=ref,event=branch
+          type=sha,prefix={{branch}}-
+          type=raw,value=latest,enable={{is_default_branch}}
 
-    - name: Run type check
-      run: npm run typecheck
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
 
-    - name: Run linter
-      run: npm run lint
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
 
-    - name: Build application
-      run: npm run build:production
-      env:
-        NODE_ENV: production
-        NEXT_PUBLIC_SITE_URL: https://skillquiz.ru
-
-    - name: Create deployment package
-      run: |
-        # Create archive with all necessary files
-        tar -czf deployment.tar.gz \
-          --exclude=node_modules \
-          --exclude=.git \
-          --exclude=.env.local \
-          --exclude=deployment.tar.gz \
-          .
-
+    steps:
     - name: Deploy to server
-      uses: appleboy/scp-action@v0.1.5
-      with:
-        host: ${{ secrets.DEPLOY_HOST }}
-        username: ${{ secrets.DEPLOY_USER }}
-        key: ${{ secrets.DEPLOY_KEY }}
-        port: ${{ secrets.DEPLOY_PORT }}
-        source: "deployment.tar.gz"
-        target: "/tmp/"
-
-    - name: Execute deployment script
       uses: appleboy/ssh-action@v1.0.0
       with:
-        host: ${{ secrets.DEPLOY_HOST }}
-        username: ${{ secrets.DEPLOY_USER }}
-        key: ${{ secrets.DEPLOY_KEY }}
-        port: ${{ secrets.DEPLOY_PORT }}
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        port: 22
         script: |
-          # Stop current application
-          cd /home/admin/apps/skillquiz
-          pm2 stop skillquiz || true
-          
-          # Backup current version
-          if [ -d "/home/admin/apps/skillquiz" ]; then
-            sudo mv /home/admin/apps/skillquiz /home/admin/apps/skillquiz-backup-$(date +%Y%m%d-%H%M%S)
-          fi
-          
-          # Create app directory
-          mkdir -p /home/admin/apps/skillquiz
-          
-          # Extract new deployment
-          cd /home/admin/apps/skillquiz
-          tar -xzf /tmp/deployment.tar.gz
-          rm -f /tmp/deployment.tar.gz
-          
-          # Create logs directory
-          mkdir -p logs
-          
-          # Install dependencies
-          npm ci --production
-          
-          # Environment variables should be set in GitHub Secrets or already in the project
-          
-          # Start application with PM2
-          pm2 start ecosystem.config.js --update-env
-          pm2 save
-          
-          # Health check
-          sleep 10
-          curl -f http://localhost:3002 || exit 1
-          
-          echo "Deployment completed successfully!"
+          ~/deploy-scripts/deploy-skillquiz.sh ghcr.io/${{ github.repository }}:latest
 
     - name: Notify deployment status
       if: always()
@@ -107,5 +67,4 @@ jobs:
         status: ${{ job.status }}
         text: 'Deployment ${{ job.status }} for SkillQuiz'
         webhook_url: ${{ secrets.SLACK_WEBHOOK }}
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      continue-on-error: true
