fix: исправлен Dockerfile для корректной сборки
- Обновлена версия Node с 18 на 20 для совместимости с зависимостями
- Добавлен флаг --ignore-scripts для npm ci чтобы избежать ошибки с husky
- Добавлен ecosystem.config.js в финальный образ
- Обновлен .dockerignore для исключения лишних файлов

--- a/.dockerignore
+++ b/.dockerignore
@@ -51,3 +51,7 @@ docker-compose*.yml
 jest.config.js
 jest.setup.js
 tsconfig.tsbuildinfo
+.husky
+.git-blame-ignore-revs
+deploy-github.yml
+ecosystem.config.js
